US361030: Dependency updates